--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "v2.8.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0",
-        "doctrine/dbal": "v2.8.0"
+        "laravel/passport": "^v7.5.0",
+        "lcobucci/jwt": "3.3.2",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
