--- a/.env.example
+++ b/.env.example
@@ -7,16 +7,21 @@ APP_HTTPS=FALSE
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=vas_recruit
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlsrv
+DB_HOST=192.168.171.30
+DB_PORT=1433
+DB_DATABASE=adm_recruit
+DB_USERNAME=apps
+DB_PASSWORD=p4ssAPPs20200402
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.sendgrid.net
+MAIL_PORT=587
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=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
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=azure_23e154c625f576973d3b88618eae7895@azure.com
+MAIL_FROM_NAME="ADM Nawatech"
+
+SALT_PASS_HR = hRAdmR3Cruit
+SALT_PASS_CANDIDATE = c4nD1D4T3AdmR3Cruit
